Fixed issue with layout on mobile

--- a/public/style/articles.css
+++ b/public/style/articles.css
@@ -202,8 +202,6 @@ footer div {
     align-items: center;
     justify-content: center;
     display: flex;
-
-    padding: 0em 2em;
 }
 
 footer div p {
